saving jwt in SharedPreference + changed Class for all Backend calls

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="passwordInput">Password</string>
     <string name="loginButton">Login</string>
     <string name="registerText">No account yet? Create one!</string>
+    <string name="BackendAPIUrl">http://192.168.0.129:8080/api/v1</string>
 </resources>
