Sidebar erstellt. Anleitung zum Einbauen im Dokument.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,10 @@
 
     <!-- System Configuation -->
     <string name="BackendAPIUrl">http://192.168.0.129:8080/api/v1/</string>
+    <string name="title_activity_navigation_activity">navigation_activity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
