--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,14 +20,14 @@
 
 
     <!-- Toasts -->
+    <string name="wrongEmail">Please use a correct email</string>
+    <string name="noPasswordMatch">Passwords do not match</string>
     <string name="notAllFields">Not all fields have been filled</string>
 
     <!-- System Configuation -->
-    <string name="BackendAPIUrl">http://192.168.0.129:8080/api/v1/</string>
     <string name="title_activity_navigation_activity">navigation_activity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
 </resources>
