--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <!--Activities-->
     <string name="app_name">PosiTime</string>
     <string name="register_activity">Registration</string>
+    <string name ="profile_activity">Profile</string>
+    <string name="workplace_activity">Workplaces</string>
+    <string name="dashboard_activity">Dashboard</string>
 
     <!-- Inputs  -->
     <string name="emailInput">Email Address</string>
