Trying to add workplace data to the Dashboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="title_activity_workplace">Workplace</string>
     <string name="title_activity_workplace_add_edit">Workplace_add_edit</string>
     <string name="title_activity_workplace_add_delete">workplace_add_delete</string>
+    <string name="id_test" />
 
 </resources>
